<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mariapoilao.apartamentos.Registrar">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNomenclatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nomenclatura"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtTamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tamano"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtPiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piso"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnPiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCaracteristicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caracteristicas"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chkSombra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sombra" />

            <CheckBox
                android:id="@+id/chkBalcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balcon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="guardar"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/limpiar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
